# SLAM

./: README.md
SLAM/: CMakeLists.txt  MIRoZmqPublisher.cpp  MIRoZmqPublisher.h  MIRoZmqSubscriber.cpp  MIRoZmqSubscriber.h  ZmqUtility.cpp  ZmqUtility.h  icp.cpp
Unity/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  SLAM_02_02_NEW.sln
Unity/Assets/: CreditsMenuController.cs
Unity/Assets/Animation/: Rotor1.controller  Rotor2.controller  fan.anim
Unity/Assets/Dyanmics/: CameraController.cs  CreatorDynamicEditor.cs  CreatorDynamicScript.cs
Unity/Assets/Materials/: BackgoundMaterial.mat  GrayOverlay.asset  LearnBackground.mat  LightBlueMaterial.mat  LightGreenMaterial.mat  PointMaterial.mat  SideMenu.mat  http___pluspng.com_img-png_sea-background-png--1920.mat
Unity/Assets/Prefabs/: 3dCameraRead.prefab  Canvas.prefab  CreditsPanel.prefab  MainMenu.prefab  PointCloudNew.prefab  PointCloudOld.prefab
Unity/Assets/Scripts/: GameController.cs  HelpMenuController.cs  LearnController.cs  MainMenu.cs  MovingCameraScript.cs  OptionsMenu.cs  PCBuilder.cs  PCDCameraEditor.cs  PlayerController.cs  PointCloud1.cs  PointCloud2.cs  RotorScript.cs  SideMenuController.cs  SphereControllerScriptNew.cs  SphereControllerScriptOld.cs  StatusBarController.cs  TopBarController.cs
Unity/Assets/Shaders/: MyShader.shader
Unity/Assets/StaticSceneAssets/: CreatorEditorStatic.cs  CreatorScriptStatic.cs  StaticCameraManager.cs  StaticCameraScript.cs
Unity/Assets/_Scenes/: Learn.unity  MainMenu.unity  (+7 more)
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+217 files in other folders)
